# picogames

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_drv_conf.h
src/: 8bitdomicro.c  8bitdozero2.c  LCDdriver.h  XPT2046.c  apds9960.c  apds9960.h  bluetooth_black.c  bluetooth_scan_black.c  bluetooth_scan_blue.c  btapi.h  character.c  dualsense.c  dualsense_report.h  dualshock4.c  dualshock4_report.h  gamepad.c  gamepad.h  graphlib.c  hakoirimusume.c  hid_host_gamepad.c  hwconfig.h  ili9341_spi.c  invaderpico.c  main.c  menu.c  pacman2data.c  pegsolitaire.c  picogames.c  picogames.h  spi-lcdpacman.c  tetrisfont.c  tetrispico.c  wsdemo.c
